test_case/nexus/pvc.yml
apiVersion: v1
kind: Namespace
metadata:
  name: common
