test_case/nexus/nexus.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nexus
  namespace: common
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nexus
    spec:
      nodeSelector:
        role: maven
      tolerations:
      - key: "role"
        operator: "Equal"
        value: "maven"
        effect: "NoSchedule"
      containers:
      - name: nexus
        image: sonatype/nexus3:3.8.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
          name: nexus-http
        - containerPort: 5000
          name: nexus-docker
        readinessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 90
          timeoutSeconds: 60
        livenessProbe:
          httpGet:
            path: /
            port: 8081
          initialDelaySeconds: 90
          timeoutSeconds: 60
        resources:
          requests:
            cpu: "4"
            memory: 8192Mi
        volumeMounts:
          - mountPath: /nexus-data
            name: nexus-data-volume
      volumes:
        - name: nexus-data-volume
          persistentVolumeClaim:
            claimName: nexus-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-repo-service
  namespace: common
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: docker
  selector:
    app: nexus
